<resources>
    <string name="app_name">ktodo</string>
    <string name="add_task">add task</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="project">Project</string>
    <string name="due_date">Due date</string>
    <string name="task_properties">Edit task</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="priority">Priority</string>
    <string name="hint_enter_due_date">Enter due date</string>
    <string name="hint_add_task_description">Add task description</string>
    <string name="hint_add_task_title">Add task title</string>
    <string name="dialog_title_confirm_project_deletion">Are you sure you want to delete %1$s?</string>
    <string name="dialog_message_confirm_project_deletion">Deleting a project will remove all of its tasks. This action cannot be undone. Do you still want to proceed?</string>

    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="dialog_title_add_project">Enter project name</string>

    <string name="snackbar_todo_deleted_message">%1$s deleted</string>
    <string name="button_undo">Undo</string>
    <string name="project_default_inbox">Inbox</string>
    <string name="upcoming">Upcoming</string>
    <string name="inbox">Inbox</string>
    <string name="nav_item_add_project">Add project</string>
    <string name="nav_item_manage_projects">Manage projects</string>
    <string name="nav_item_projects">Projects</string>
    <string name="nav_item_stats">Stats</string>
    <string name="nav_item_settings">Settings</string>
    <string name="stats_7_days">7 days</string>
    <string name="stats_30_days">30 days</string>
    <string name="stats_productivity_overview">Productivity overview</string>
    <string name="chart_description">Number of tasks completed per day</string>
    <string name="snackbar_todo_completed_message">%1$s completed</string>
    <string name="unset_date">Unset</string>
    <string name="warning_project_name_empty">Project name cannot be empty.</string>
</resources>