<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"> <!-- TODO -->

    <item
        android:id="@+id/nav_upcoming"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/nav_inbox"
        android:title="@string/inbox"/>
    <item
        android:id="@+id/nav_add_project"
        android:title="@string/nav_item_add_project" />
    <item
        android:id="@+id/nav_manage_projects"
        android:title="@string/nav_item_manage_projects" />

    <item
        android:id="@+id/projects_menu_root"
        android:title="@string/nav_item_projects">
        <menu
            android:id="@+id/projects_menu">
        </menu>
    </item>

    <item
        android:id="@+id/nav_stats"
        android:title="@string/nav_item_stats" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_item_settings" />

</menu>